--- a/project-3/.vscode/settings.json
+++ b/project-3/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "types.h": "c",
         "signal.h": "c",
-        "deli_client": "c"
+        "deli_client": "c",
+        "unistd.h": "c",
+        "string.h": "c"
     }
 }
